# adaptive-profiler

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  adaprof.py  benchmark.py  requirements.txt
benchmark/: __init__.py  matmul.py  ml.py  xml.py
notebooks/: benchmark.ipynb  plots.ipynb  symbol_size.ipynb
src/: counter.rs  lib.rs  lifecycle.rs  perfcnt.rs  profiler.rs  stopwatch.rs  time.rs  update.rs
util/: cprofile.py  timer.py
