[package]
name = "adaptive-profiler"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "adaptive_profiler"
crate-type = ["cdylib"]

[dependencies]
splay = "0.1.8"

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]
