[package]
name = "adaptive-profiler"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "adaptive_profiler"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 3

[dependencies]
splay = "0.1.8"
perfcnt = { version = "0.7.1", optional = true }
string-interner = "0.12.2"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
